dex/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: auth
  labels:
    app: dex
    app.kubernetes.io/component: dex
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
        app.kubernetes.io/component: dex
        app.kubernetes.io/name: dex
        app.kubernetes.io/part-of: auth
    spec:
      containers:
        - name: dex
          image: ghcr.io/dexidp/dex:v2.37.0
          args: ["serve", "/etc/dex/config.yaml"]
          ports:
            - containerPort: 5556
          volumeMounts:
            - name: config
              mountPath: /etc/dex
          resources:
            requests:
              cpu: 50m
              memory: 80Mi
            limits:
              cpu: 300m
              memory: 160Mi
      volumes:
        - name: config
          configMap:
            name: dex-config
