dex/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: auth
  labels:
    app: dex
    app.kubernetes.io/component: dex
    app.kubernetes.io/name: dex
    app.kubernetes.io/part-of: auth
spec:
  selector:
    app: dex
  ports:
    - port: 80
      targetPort: 5556
